# taskscheduler

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements-ui.txt  scheduler.py
src/taskscheduler/: __init__.py  __main__.py  core.py  ui_app.py  ui_launcher.py
