[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskscheduler"
version = "0.1.0"
description = "Windows Task Scheduler helper for Python scripts"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.scripts]
taskscheduler = "taskscheduler.__main__:main"
taskscheduler-ui = "taskscheduler.ui_launcher:main"

[tool.setuptools]
packages = { find = { where = ["src"], include = ["taskscheduler*"] } }
package-dir = {"" = "src"}

[project.optional-dependencies]
ui = [
  "streamlit>=1.28",
]
